--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     .checkout-btn { background-color: #dc3545; padding: 4px; margin: 1px; font-size: 12px; }
     .charge-btn { background-color: #ffc107; padding: 4px; margin: 1px; font-size: 12px; }
     #dashboard { overflow-x: auto; }
+    .dialog { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 20px; border: 2px solid #000; z-index: 1000; display: none; flex-direction: column; gap: 10px; max-width: 90%; }
+    .dialog-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: 999; display: none; }
+    #dialogSignaturePad { border: 2px solid #000; background: #f0f0f0; width: 300px; height: 150px; margin: 10px auto; }
+    #dialogCardContainer { margin: 10px auto; }
   </style>
 </head>
 <body>
@@ -89,12 +93,53 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
     <p id="nfcStatusResult">Scan an NFC tag to see headphone status.</p>
   </div>
 
+  <!-- Checkout Dialog -->
+  <div id="checkoutDialog" class="dialog">
+    <h2>Checkout Headphone</h2>
+    <button id="dialogScanCheckout" onclick="scanNFC('dialogCheckout'); vibrate()">Scan NFC Tag</button>
+    <input id="dialogHeadphoneId" placeholder="Headphone ID (e.g., HP123)" readonly>
+    <input id="dialogName" placeholder="Full Name">
+    <input id="dialogEmail" placeholder="Email">
+    <input id="dialogPhone" placeholder="Phone Number">
+    <textarea id="dialogAgreement" readonly rows="12">RENTAL AGREEMENT AND COLLATERAL TERMS
+
+By signing below, I, [Customer Name], agree to rent one (1) pair of wireless headphones from SE2 Silent Disco DBA and SE2 Events Inc. ("the Company") for use during the event on [Date]. I acknowledge that the headphones remain the property of the Company and must be returned in good working condition at the end of the event or upon request.
+
+I understand and agree that failure to return the headphones by the end of the event will result in a replacement fee of $100.00 USD ("Replacement Fee"). I authorize the Company to charge my credit card, provided below, the Replacement Fee if the headphones are not returned or are returned damaged beyond normal wear and tear.
+
+LIABILITY RELEASE: I hereby release, waive, discharge, and agree not to sue SE2 Silent Disco DBA and SE2 Events Inc., its officers, employees, agents, or affiliates ("Released Parties") from any and all liability, claims, demands, actions, or causes of action arising out of or related to any loss, damage, or injury, including death, that may be sustained by me or my property while using the headphones or attending the event, whether caused by the negligence of the Released Parties or otherwise. I assume full responsibility for any risk of bodily injury, death, or property damage arising from my use of the headphones and participation in the event.
+
+MARKETING CONSENT: I grant SE2 Silent Disco DBA and SE2 Events Inc. permission to use my email address and phone number provided herein for marketing purposes, including but not limited to sending promotional offers, event updates, and newsletters. I understand I may opt out of these communications at any time by following the unsubscribe instructions provided in such messages.
+
+PHOTO/VIDEO CONSENT: I consent to being photographed or recorded in video or audio by SE2 Silent Disco DBA and SE2 Events Inc. during the event. I grant the Company full permission to use, reproduce, publish, and distribute such photographs, videos, or recordings, including my likeness, voice, or image, for marketing, advertising, or promotional purposes in any medium, without compensation or further notice to me.
+
+This agreement constitutes a legally binding contract. I acknowledge that I have read and understood these terms, and I sign this agreement voluntarily under no duress. Any disputes arising from this agreement shall be governed by the laws of New York, USA.</textarea>
+    <div id="dialogCardContainer"></div>
+    <canvas id="dialogSignaturePad" width="300" height="150"></canvas>
+    <button onclick="clearDialogSignature(); vibrate()">Clear Signature</button>
+    <button onclick="submitCheckoutDialog(); vibrate()">Complete Checkout</button>
+    <button onclick="closeDialog('checkout'); vibrate()">Cancel</button>
+  </div>
+
+  <!-- Return Dialog -->
+  <div id="returnDialog" class="dialog">
+    <h2>Return Headphone</h2>
+    <button id="dialogScanReturn" onclick="scanNFC('dialogReturn'); vibrate()">Scan NFC Tag</button>
+    <input id="dialogReturnId" placeholder="Headphone ID" readonly>
+    <button onclick="submitReturnDialog(); vibrate()">Return</button>
+    <button onclick="closeDialog('return'); vibrate()">Cancel</button>
+  </div>
+
+  <div id="dialogOverlay" class="dialog-overlay" onclick="closeDialog(null); vibrate()"></div>
+
   <script>
     const squareAppId = 'sandbox-sq0idb-qaDoxfFQK3OfUWlaCrgkDw';
     let headphones = JSON.parse(localStorage.getItem('headphones')) || {};
     let signatureData = null;
+    let dialogSignatureData = null;
     let payments;
     let cardElement;
+    let dialogCardElement;
 
     async function initializeSquare() {
       if (!payments) {
@@ -102,13 +147,13 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       }
       const cardContainer = document.getElementById('card-container');
       cardContainer.innerHTML = '';
-      const card = await payments.card();
-      await card.attach('#card-container');
-      return card;
+      cardElement = await payments.card();
+      await cardElement.attach('#card-container');
+      return cardElement;
     }
 
     window.onload = async () => {
-      cardElement = await initializeSquare();
+      await initializeSquare();
     };
 
     function vibrate() {
@@ -117,7 +162,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
 
     async function showCheckout() {
       toggleForms('checkout');
-      initSignaturePad();
+      initSignaturePad('signaturePad');
     }
 
     function showReturn() { toggleForms('return'); }
@@ -143,7 +188,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
               const hp = headphones[id];
               resultElement.innerHTML = `
                 <strong>ID:</strong> ${id}<br>
-                <strong>Status:</strong> ${hp.status === 'checked_out' ? 'Checked Out' : 'Returned'}<br>
+                <strong>Status:</strong> ${hp.status === 'checked_out' ? 'Checked Out' : hp.status === 'returned' ? 'Returned' : 'Charged'}<br>
                 <strong>Customer:</strong> ${hp.customer.name}<br>
                 <strong>Email:</strong> ${hp.customer.email}<br>
                 <strong>Phone:</strong> ${hp.customer.phone}<br>
@@ -180,10 +225,14 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       ['checkout', 'return', 'dashboard', 'nfcStatus'].forEach(id => {
         document.getElementById(id).style.display = id === active ? 'flex' : 'none';
       });
+      document.getElementById('checkoutDialog').style.display = 'none';
+      document.getElementById('returnDialog').style.display = 'none';
+      document.getElementById('dialogOverlay').style.display = 'none';
     }
 
     async function scanNFC(context) {
-      const button = document.getElementById(context === 'checkout' ? 'scanCheckout' : 'scanReturn');
+      const button = document.getElementById(context === 'checkout' ? 'scanCheckout' : context === 'return' ? 'scanReturn' : context === 'dialogCheckout' ? 'dialogScanCheckout' : 'dialogScanReturn');
+      const input = document.getElementById(context === 'checkout' ? 'headphoneId' : context === 'return' ? 'returnId' : context === 'dialogCheckout' ? 'dialogHeadphoneId' : 'dialogReturnId');
       button.disabled = true;
       if ('NDEFReader' in window) {
         const ndef = new NDEFReader();
@@ -192,7 +241,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
           const controller = new AbortController();
           ndef.onreading = event => {
             const id = event.serialNumber || `HP${Object.keys(headphones).length + 1}`;
-            setId(context, id);
+            input.value = id;
             alert(`Scanned headphone: ${id}`);
             controller.abort();
             button.disabled = false;
@@ -227,18 +276,14 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
 
     function manualEntry(context) {
       const id = prompt('Enter headphone ID (e.g., HP123):');
-      const button = document.getElementById(context === 'checkout' ? 'scanCheckout' : 'scanReturn');
-      if (id) setId(context, id);
+      const input = document.getElementById(context === 'checkout' ? 'headphoneId' : context === 'return' ? 'returnId' : context === 'dialogCheckout' ? 'dialogHeadphoneId' : 'dialogReturnId');
+      const button = document.getElementById(context === 'checkout' ? 'scanCheckout' : context === 'return' ? 'scanReturn' : context === 'dialogCheckout' ? 'dialogScanCheckout' : 'dialogScanReturn');
+      if (id) input.value = id;
       button.disabled = false;
     }
 
-    function setId(context, id) {
-      if (context === 'checkout') document.getElementById('headphoneId').value = id;
-      else document.getElementById('returnId').value = id;
-    }
-
-    function initSignaturePad() {
-      const canvas = document.getElementById('signaturePad');
+    function initSignaturePad(canvasId) {
+      const canvas = document.getElementById(canvasId);
       const ctx = canvas.getContext('2d');
       let drawing = false;
 
@@ -272,7 +317,11 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       function stopDrawing() {
         if (drawing) {
           drawing = false;
-          signatureData = canvas.toDataURL();
+          if (canvasId === 'signaturePad') {
+            signatureData = canvas.toDataURL();
+          } else {
+            dialogSignatureData = canvas.toDataURL();
+          }
         }
       }
 
@@ -291,6 +340,13 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       const ctx = canvas.getContext('2d');
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       signatureData = null;
+    }
+
+    function clearDialogSignature() {
+      const canvas = document.getElementById('dialogSignaturePad');
+      const ctx = canvas.getContext('2d');
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      dialogSignatureData = null;
     }
 
     async function checkout() {
@@ -392,31 +448,135 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       }
     }
 
-    function dashboardCheckout(id) {
-      if (headphones[id] && headphones[id].status !== 'returned' && headphones[id].status !== 'charged') {
-        alert(`Headphone ${id} is already checked out. Use the Checkout form for new rentals or check it in first.`);
-        return;
-      }
-      headphones[id] = { 
-        status: 'checked_out', 
-        customer: { name: 'Manual', email: 'manual@example.com', phone: 'N/A' }, 
-        agreement: { date: new Date().toISOString().split('T')[0], timestamp: Date.now() },
-        pre_auth: null 
-      };
-      localStorage.setItem('headphones', JSON.stringify(headphones));
-      alert(`Headphone ${id} checked out manually!`);
-      updateDashboard();
+    function showCheckoutDialog(id) {
+      document.getElementById('dialogHeadphoneId').value = id;
+      document.getElementById('dialogName').value = '';
+      document.getElementById('dialogEmail').value = '';
+      document.getElementById('dialogPhone').value = '';
+      clearDialogSignature();
+      document.getElementById('checkoutDialog').style.display = 'flex';
+      document.getElementById('dialogOverlay').style.display = 'block';
+      initSignaturePad('dialogSignaturePad');
+      initDialogCard();
     }
 
-    function dashboardCheckin(id) {
+    async function initDialogCard() {
+      const dialogCardContainer = document.getElementById('dialogCardContainer');
+      dialogCardContainer.innerHTML = '';
+      dialogCardElement = await payments.card();
+      await dialogCardElement.attach('#dialogCardContainer');
+    }
+
+    function showReturnDialog(id) {
+      document.getElementById('dialogReturnId').value = id;
+      document.getElementById('returnDialog').style.display = 'flex';
+      document.getElementById('dialogOverlay').style.display = 'block';
+    }
+
+    function closeDialog(type) {
+      if (type === 'checkout') {
+        document.getElementById('checkoutDialog').style.display = 'none';
+      } else if (type === 'return') {
+        document.getElementById('returnDialog').style.display = 'none';
+      }
+      document.getElementById('dialogOverlay').style.display = 'none';
+    }
+
+    async function submitCheckoutDialog() {
+      const id = document.getElementById('dialogHeadphoneId').value;
+      const name = document.getElementById('dialogName').value;
+      const email = document.getElementById('dialogEmail').value;
+      const phone = document.getElementById('dialogPhone').value;
+      const date = new Date().toISOString().split('T')[0];
+
+      if (!id || !name || !email || !phone || !dialogSignatureData || !dialogCardElement) {
+        alert('Please fill all fields, enter card details, and sign the agreement!');
+        return;
+      }
+
+      const agreementText = document.getElementById('dialogAgreement').value
+        .replace('[Customer Name]', name)
+        .replace('[Date]', date);
+
+      if (headphones[id] && headphones[id].status === 'checked_out') {
+        alert('This headphone is already checked out!');
+        return;
+      }
+
+      try {
+        console.log('Starting dialog card tokenization...');
+        const result = await dialogCardElement.tokenize();
+        console.log('Tokenization result:', result);
+        if (result.status !== 'OK') throw new Error('Card tokenization failed: ' + (result.errors?.[0]?.message || 'Unknown error'));
+        const paymentToken = result.token;
+        console.log('Payment token:', paymentToken);
+
+        console.log('Sending preauthorization request...');
+        const preauthResponse = await fetch('/.netlify/functions/preauthorize', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({
+            sourceId: paymentToken,
+            amount: 10000,
+            currency: 'USD',
+            locationId: 'LQ7MAQD7N37E5'
+          })
+        });
+
+        const preauthResult = await preauthResponse.json();
+        console.log('Preauthorization response:', preauthResult);
+        if (!preauthResponse.ok) throw new Error(preauthResult.error || 'Preauthorization failed');
+        const preauthId = preauthResult.paymentId;
+
+        headphones[id] = {
+          status: 'checked_out',
+          customer: { name, email, phone },
+          agreement: { text: agreementText, signature: dialogSignatureData, amount: 100, date: date, timestamp: Date.now() },
+          pre_auth: { pre_auth_id: preauthId, amount: 100 }
+        };
+        localStorage.setItem('headphones', JSON.stringify(headphones));
+
+        console.log('Sending email...');
+        const emailResponse = await fetch('/.netlify/functions/send-email', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({
+            name: name,
+            email: email,
+            agreement: agreementText,
+            signature: dialogSignatureData,
+            preauthId: preauthId
+          })
+        });
+
+        if (emailResponse.ok) {
+          alert(`Headphone ${id} checked out! Agreement emailed to ${email}. Preauthorization completed.`);
+          closeDialog('checkout');
+          updateDashboard();
+        } else {
+          throw new Error('Email failed');
+        }
+      } catch (error) {
+        console.error('Checkout error:', error.message);
+        alert('Checkout failed: ' + error.message);
+      }
+    }
+
+    function submitReturnDialog() {
+      const id = document.getElementById('dialogReturnId').value;
+      if (!id) {
+        alert('Please scan or enter a headphone ID!');
+        return;
+      }
       if (headphones[id] && headphones[id].status === 'checked_out') {
         headphones[id].status = 'returned';
         headphones[id].pre_auth = null;
         localStorage.setItem('headphones', JSON.stringify(headphones));
-        alert(`Headphone ${id} checked in manually!`);
+        alert(`Headphone ${id} returned!`);
+        closeDialog('return');
         updateDashboard();
       } else {
-        alert(`Headphone ${id} is not checked out!`);
+        alert('Headphone not found or not checked out!');
       }
     }
 
@@ -459,7 +619,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       Object.keys(headphones).forEach(id => {
         const hp = headphones[id];
         const statusText = hp.status === 'checked_out' ? 'Checked Out' : hp.status === 'returned' ? 'Returned' : 'Charged';
-        const checkoutTime = hp.agreement?.timestamp || now; // Fallback to now if timestamp missing
+        const checkoutTime = hp.agreement?.timestamp || now;
         const overdue = hp.status === 'checked_out' && (now - checkoutTime > twelveHours);
         const rowData = [
           hp.customer?.name || 'N/A',
@@ -477,10 +637,10 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
           const row = document.createElement('tr');
           let actionsHtml = '';
           if (hp.status !== 'checked_out') {
-            actionsHtml += `<button class="checkout-btn" onclick="dashboardCheckout('${id}')">Check Out</button>`;
+            actionsHtml += `<button class="checkout-btn" onclick="showCheckoutDialog('${id}')">Check Out</button>`;
           }
           if (hp.status === 'checked_out') {
-            actionsHtml += `<button class="checkin-btn" onclick="dashboardCheckin('${id}')">Check In</button>`;
+            actionsHtml += `<button class="checkin-btn" onclick="showReturnDialog('${id}')">Check In</button>`;
           }
           if (hp.status === 'checked_out' && hp.pre_auth && overdue) {
             actionsHtml += `<button class="charge-btn" onclick="dashboardCharge('${id}')">Charge</button>`;
@@ -509,6 +669,10 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
 
     function clearForm(formId) {
       document.getElementById(formId).querySelectorAll('input').forEach(input => input.value = '');
+      if (formId === 'checkout') {
+        document.getElementById('card-container').innerHTML = '';
+        initializeSquare();
+      }
     }
   </script>
 </body>
